update drawer expand/collapse and fix default_val not defined

--- a/wp-content/themes/crucial-trading/rugbuilder/assets/css/src/components/drawer/drawer-size.scss
+++ b/wp-content/themes/crucial-trading/rugbuilder/assets/css/src/components/drawer/drawer-size.scss
@@ -2,6 +2,11 @@
 	position: relative;
 	text-align: center;
 
+	span {
+		display: block;
+		padding: 50px 0;
+	}
+
 	input {
 		background: $light-grey-bg;
 		border: 2px solid rgba(0,0,0,0.05);
